--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
+    "date-fns": "^4.1.0",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
     "react": "^19.1.1",
+    "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-is": "^19.2.0",
